# fin-report-reviewer

./: .gitattributes  .gitignore  LICENSE  README-EN.md  README.md  app.py  env.example  pyproject.toml  requirements.txt  test_milvus_query.py  test_report_generation.py  test_report_ingestion.py  todo.md  技术栈.md
.cursor/rules/: fin-report.mdc
config/: companies.yaml
data/chunks/: 360-2025Q2chunks.json  海康威视-2025Q2chunks.json  海康威视-2025半年报_chunks.json
data/markdowns/: MinerU_360-2025一季度报__20251115024409.md  MinerU_360-2025半年报__20251115024319.md  MinerU_海康威视-2025一季度报__20251115024354.md  MinerU_海康威视-2025半年报__20251115014014.md
docs/: CHANGELOG_embedding.md  LangGraph架构说明.md  RAG.md  database_field_mapping.md  embedding_quickstart.md  embedding_service.md  作品简介.md  大模型应用中的GIGO陷阱与破局之道.md  张新民教你读财报总结.md  微服务架构重构说明.md  系统架构设计.md  重构总结.md  需求文档.md
docs/财报表结构/: 财报核心表.puml
emb-server/: README_HYBRID_CHUNKER.md  embedding_server.py  hybrid_chunker.py  hybrid_chunker_server.py
financial-data-service/: README.md  financial_data_server.py  start_server.bat  start_server.sh
scripts/: chunk_markdown_file.py  database_schema.sql  docker-compose.yml  import_financial_data.py
src/: __init__.py
src/analysis/: __init__.py  report_generator.py
src/clients/: __init__.py  financial_data_http_client.py
src/config/: __init__.py  industry_configs.py  prompts.py  settings.py
src/database/: __init__.py  financial_data_service.py
src/graphs/: __init__.py  (+2 more)
tests/: test_docling.py  test_docling_chunk.py  test_markdown_chunker.py  test_milvus_query.py  test_report_ingestion.py
(+24 files in other folders)
